# MagnetismReflectometer

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  Makefile  README.md  environment.yml  pyproject.toml  response.json
.github/: pull_request_template.md
.github/actions/: test_trigger_gitlab.yml
.github/actions/test_trigger_gitlab/: action.yml
.github/workflows/: dev_sync.yml  package.yml  test_and_deploy.yml  test_deploy.yml  testing.yml  update-lockfile.yml
autoreduce/: reduce_REF_M.py  reduce_REF_M.py.template
conda.recipe/: meta.yaml
docs/: Makefile  conf.py  index.rst  release_notes.rst  releases.rst
docs/developer/: developer.rst  developing.rst  livereduction.rst  troubleshoot.rst
docs/user/: conda_environments.rst  dead_time_correction.rst  multiple_peaks.rst  multiple_samples.rst  polarization.rst  reduce.rst  roi.rst
docs/user/media/: roi_pv_digest.puml
livereduce/: LeftHandSide.py  polarization_analysis.py  reduce_REF_M_live_post_proc.py  reduce_REF_M_live_proc.py
mr_reduction/: data_info.py  dummy_mr_filter_cross_sections.py  mr_direct_beam_finder.py  mr_filter_events.py  mr_reduction.py  mr_translate.py  reflectivity_merge.py  reflectivity_output.py  script_output.py  settings.py  web_report.py
src/autoreduce/: reduce_REF_M.py  reduce_REF_M.py.template  reduce_REF_M_run.py  reduce_REF_M_run.sh
src/autoreduce/templates/: reduction_options.html
src/livereduce/: reduce_REF_M_live_post_proc.py
src/mr_autoreduce/: reduce_REF_M.py.template  reduce_REF_M_run.py  reduce_REF_M_run.sh
src/mr_autoreduce/templates/: reduction_options.html
src/mr_livereduce/: livereduce.conf  livereduce_watchdog.service  livereduce_watchdog.sh  polarization_analysis.py  reduce_REF_M_live_post_proc.py  reduce_REF_M_live_proc.py
src/mr_livereduce/scripts/: reduce_REF_M_live_post_proc.py
src/mr_reduction/: _version.py  beam_options.py  data_info.py  dead_time_correction.py  filter.py  filter_events.py  inspect_data.py  io_orso.py  logging.py  mantid_algorithm_utils.py  mr_direct_beam_finder.py  mr_filter_events.py  mr_reduction.py  oncat_comm.py  peak_finding.py  reflectivity_merge.py  reflectivity_output.py  runpeak.py  runsample.py  script_output.py  settings.py  simple_utils.py  spin_setup.py  types.py  version.py  web_report.py
src/mr_reduction/scripts/: nexus_to_orso.py
test/: a2_29160.txt  r1_29160.txt  r2_29160.txt  simple_reduction.py  translate_test.py  unit_tests.py
tests/: conftest.py  filtering_test.py  r2_29160.txt  test_fixtures.py  test_version.py
tests/integration/: filtering_test.py  simple_reduction.py  test_filter_events.py  test_mr_reduction.py  test_reduce_REF_M_live_post_proc.py  test_reduce_REF_M_run.py  test_script_output.py  test_simple_reduction.py  test_template.py
tests/unit/autoreduce/: test_template.py
tests/unit/livereduce/: __init__.py  test_polarization_analysis.py
tests/unit/mr_autoreduce/: test_template.py
tests/unit/mr_livereduce/: __init__.py  test_polarization_analysis.py  test_reduce_REF_M_live_post_proc.py
tests/unit/mr_reduction/: test_beam_options.py  test_data_info.py  test_dead_time_correction.py  test_filter_events.py  test_inspect_data.py  test_io_orso.py  test_mantid_algorithm_utils.py  test_mr_direct_beam_finder.py  test_mr_reduction.py  test_reflectivity_merge.py  test_reflectivity_output.py  test_runpeak.py  test_runsample.py  test_script_output.py  test_settings.py  test_simple_utils.py  test_spin_setup.py  test_web_report.py
