[project]
name = "mr_reduction"
description = "Magnetism Reflectometer Automated Reduction"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
  # list all runtime dependencies here
]
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/neutrons/MagnetismReflectometer/"

[build-system]
requires = [
  "setuptools >= 40.6.0",
  "wheel",
  "toml",
  "versioningit"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "scripts*", "docs*", "notebooks*"]

[tool.setuptools.package-data]
"*" = ["*.yml","*.yaml","*.ini", "*sh", "*.html", "*.template"]

[tool.black]
line-length = 119

[tool.ruff]
line-length = 119
exclude = ["src/mr_autoreduce/reduce_REF_M.py.template"]
# https://beta.ruff.rs/docs/rules/
lint.select = ["A", "ARG", "BLE", "E", "F", "I", "PT"]
lint.ignore = ["F403", "F405", "F401", # wild imports and  unknown names
]

[tool.versioningit.vcs]
method = "git"
default-tag = "1.0.0"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}"
dirty = "{version}+d{build_date:%Y%m%d}"
distance-dirty = "{next_version}.dev{distance}+d{build_date:%Y%m%d%H%M}"

[tool.versioningit.write]
file = "src/mr_reduction/_version.py"

# [project.scripts]
# packagename-cli = "mr_reduction.packagename:main"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src", "scripts"
]
testpaths = ["tests"]
python_files = ["test*.py"]
norecursedirs = [".git", "tmp*", "_tmp*", "__pycache__", "*dataset*", "*data_set*"]
markers = [
    "datarepo: using repository mr_reduction-data",
    "sns_mounted: requires the /SNS filesystem"
]

[tool.pylint]
max-line-length = 119
disable = ["too-many-locals",
           "too-many-statements",
           "too-many-instance-attributes",
           "too-many-arguments",
           "duplicate-code"
]

# Add additional 3rd party tool configuration here as needed
